--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "ng-file-upload": "^12.0.1",
     "file-saver": "^1.3.2",
     "ng-dialog": "^0.6.4",
-    "angular-uuid4": "^0.3.1"
+    "angular-uuid4": "^0.3.1",
+    "angular-local-storage": "^0.5.0"
   }
 }
