--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "file-saver": "^1.3.2",
     "ng-dialog": "^0.6.4",
     "angular-uuid4": "^0.3.1",
-    "angular-local-storage": "^0.5.0"
+    "angular-local-storage": "^0.5.0",
+    "lodash": "^4.16.1"
   }
 }
